final styling on the project title modal. Updated the global large font for using font extension over declaring independently. Fixed the instructions, added spacing between label and field

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -35,7 +35,7 @@
 }
 
 .large-font {
-    font-size: 22px;
+    font-size: 24px;
     line-height: 1.5;
     font-weight: 400;
     letter-spacing: -0.8px;
